Fix anchoring of permission dialog in full screen mode

This CL updates GetPageInfoAnchorView() to check visibility of the view
hierarchy instead of just single view elements. In Linux/Windows fullscreen
the ToolbarView is not visible while its children's visibility are still set to
true so it's not enough to only check their visibility.

Before:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=337120&signed_aid=2W8EBRpI7WsrXmCDI0TVEA==&inline=1

After:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=337121&signed_aid=aiaQuXt1dB53LM_ahvCL7Q==&inline=1

Bug: 838079
Change-Id: I223f5f78f61e80f7873347ff77ed21949b405949
Reviewed-on: https://chromium-review.googlesource.com/1036964
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555325}
Former-commit-id: 4393d7d26958ddfde299daed891045bb36ac5045